[gd_scene load_steps=2 format=3 uid="uid://ddidoseqtm1qt"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_c24if"]

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c24if")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -77.0
offset_right = 44.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="FinalScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Final Score:
2000"
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="VBoxContainer/Button3" to="." method="_on_button_3_button_down"]
